homepage.css
h1 {
  font-size: 28pt;
}
body {
  background-color: white;
  color: #000000;
  font-family: "Roboto";
}
#brand {
  padding-top: 0px;
  padding-bottom: 0px;
}
.nav-item.active {
  padding-left: 20px;
  font-weight: bold;
  font-size: 18pt;
  color: black;
}
.dropdown-menu {
  color: black;
  background-color: white;
  font-size: 18pt;
}
.nav-item.dropdown {
  padding-left: 20px;
  font-weight: bold;
  font-size: 18pt;
  color: black;
}
.navbar {
  background-color: #26f2ae;
}
.searchButton {
  color: #000000;
}

